fix function name

--- a/env.ipynb
+++ b/env.ipynb
@@ -2099,13 +2099,6 @@
     "main([ramdom_player,ramdom_player,ramdom_player,ramdom_player],1,0)\n",
     "# numbaMain(ramdom_player,ramdom_player,ramdom_player,ramdom_player,500000,0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2124,7 +2117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
